# name-origin-api

./: .dockerignore  .env.prod.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  dev.Dockerfile  prod.Dockerfile  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  ci.yml
alembic/: env.py
app/: alembic.ini
app/alembic/: env.py
app/alembic/versions/: 20250526_07_53_34_add_countries_and_names_origin_tables.py  20250527_13_15_53_add_names_origins_and_countries_tables.py  20250528_18_06_16_add_names_and_countries_tables.py
app/application/: main.py  static_docs.py
app/application/v1/exceptions/: schemas.py
app/application/v1/name/: handlers.py  schemas.py
app/domain/entities/: Name.py  country.py  name.py
app/domain/exceptions/: base.py  name.py
app/domain/values/: base.py  name.py
app/infra/converters/: base.py  country.py  name.py
app/infra/models/: __init__.py  country.py  name.py
app/infra/repositories/: base.py  countries_api.py  nationalize_api.py
app/infra/repositories/api/: base.py  countries_api.py  nationalize_api.py
app/infra/repositories/sql/: base.py  country.py  name.py  session_generator.py  unit_of_work.py
app/logic/: init.py  mediator..py
app/logic/commands/: base.py  country.py  name.py
app/logic/exceptions/: base.py  country.py  mediator.py  name.py
app/scripts/: init_countries.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_name.py
app/tests/domain/entities/: test_country.py  test_name.py
app/tests/domain/values/: test_name.py
app/tests/infra/: test_countries_api.py  test_nationalize_api.py
docker_compose/: app.yaml  storages.prod.yaml  storages.yaml
