[project]
authors = [
    { name = "Bashar Hasan - Abstract-333", email = "basharhasan74@gmail.com" },
]
name = "name-origin-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[dependency-groups]
lint = [
    "ruff>=0.11.11",
]
test = [
    "faker>=37.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
