[project]
authors = [
    { name = "Bashar Hasan - Abstract-333", email = "basharhasan74@gmail.com" },
]
name = "name-origin-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "uuid-utils>=0.11.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]
lint = [
    "ruff>=0.11.11",
]
test = [
    "faker>=37.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2
src_paths = ["app", ]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    ".github",
]
known_fastapi = ["fastapi"]
known_first_party = ["application", "domain", "events", "infra", "logic", "utils", "tests"]
sections = [
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
